--- a/styles/custom/buildingblocks/_card.scss
+++ b/styles/custom/buildingblocks/_card.scss
@@ -1,24 +1,13 @@
-/*
-* Mendix Documentation
-* Special styles for presenting profilecard building block
-*/
-
-//Card background randomizer
-
-
-/*
-* Card
-*
-*
-*/
-
-.card{
+/* ==========================================================================
+   Card
+========================================================================== */
+.card {
 	background-color: rgba(148, 192, 234, 0.39);
-  color: #fff;
-  border: 1px solid rgba(148, 148, 148, 0.74);
-  font-weight: 100;
-  padding: 20px;
-  border-radius: 0px;
+	color: $color-text-white;
+	border: 1px solid rgba(148, 148, 148, 0.74);
+	font-weight: 100;
+	padding: 20px;
+	border-radius: 0px;
 	background: linear-gradient(to bottom, rgba(218, 218, 218, 0.38) 10%, rgba(255, 255, 255, 0.11) 62%, rgba(255, 255, 255, 0.34) 117%);
 }
 
