--- a/styles/custom/base/_base.scss
+++ b/styles/custom/base/_base.scss
@@ -1,14 +1,13 @@
-/*
-* Base
-*
-* Default settings
-*/
+/* ==========================================================================
+   Base
 
+   Default settings
+========================================================================== */
 body {
 	background-image: url("../../img/background.png");
-  background-size: 100% 100%;
-  background-attachment: fixed;
-  background-repeat: no-repeat;  
+	background-size: 100% 100%;
+	background-attachment: fixed;
+	background-repeat: no-repeat;  
 }
 a {
 
