--- a/styles/custom/buildingblocks/templategrid/_templategrid-profilecard.scss
+++ b/styles/custom/buildingblocks/templategrid/_templategrid-profilecard.scss
@@ -1,30 +1,22 @@
-/*
-* Mendix Documentation
-* Special styles for presenting profilecard building block
-*/
+/* ==========================================================================
+   Templategrid Profile Card
 
-
-/*
-* Templategrid Profile Card
-*
-* Profile card styled for templategrid
-*/
-
+   Profile card styled for templategrid
+========================================================================== */
 .templategrid-profilecard {
 	padding: 20px;
-  border: 1px solid rgba(221, 221, 221, 0.29);
-  background-color: rgba(100, 100, 100, 0.41);
-  border-radius: 3px;
-
+	border: 1px solid rgba(221, 221, 221, 0.29);
+	background-color: rgba(100, 100, 100, 0.41);
+	border-radius: 3px;
 	.templategrid-profilecard-contentwrapper {
-
+		
 	}
 	.templategrid-profilecard-imgwrapper {
-
+		
 	}
 	.templategrid-profilecard-contentwrapper,
 	.templategrid-profilecard-imgwrapper {
-
+	
 	}
 	.templategrid-profilecard-btn {
 
@@ -36,6 +28,6 @@
 
 	}
 	.templategrid-profilecard-subtitle {
-
+		
 	}
 }
