--- a/styles/custom/components/_modals.scss
+++ b/styles/custom/components/_modals.scss
@@ -10,17 +10,16 @@
 * Default Mendix Modals. Modals are streamlined, but flexible, dialog prompts with the minimum required functionality and smart defaults
 */
 .modal-dialog {
-	//background-color: #000 !important;
 	.modal-content {
 	background-color: rgba(0, 0, 0, 0.8);
 		.modal-header {
 			border-bottom-color: #424242;
 
 			h4 {
-					color: #fff;
+				color: $color-text-white;
 			}
 			.close {
-
+				color: $color-text-white;
 			}
 		}
 		.modal-body {
