--- a/styles/sass/custom/layouts/_base.scss
+++ b/styles/sass/custom/layouts/_base.scss
@@ -47,7 +47,7 @@
 	img {
 		height: 25px;
 		margin-right: 10px;
-		content: url(../img/logo.png);
+		content: url(../../../img/logo.png);
 		vertical-align: middle;
 	}
 	a {
