--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -2342,37 +2342,29 @@ img.img-auto,
   margin: 0;
 }
 .mx-navigationlist .mx-navigationlist-item {
-  padding: 10px;
-}
-.mx-navigationlist .mx-navigationlist-item:hover {
-  background-color: #FFF !important;
-}
-
-/* ==========================================================================
-   Navigation List Hover
-
-   Default Mendix Navigation List Widget with hover
-========================================================================== */
-.navigationlist-hover.mx-navigationlist .mx-navigationlist-item:hover, .navigationlist-hover.mx-navigationlist .mx-navigationlist-item:active {
-  background-color: shade(#fff, 3) !important;
-}
-
-/* ==========================================================================
-   Navigation List Lined
-
-   Default Mendix Navigation List Widget border top between navigation list items
-========================================================================== */
-.navigationlist-lined.mx-navigationlist .mx-navigationlist-item {
-  border-top: 1px solid #DDD;
-  border-right: none;
-  border-left: none;
-}
-.navigationlist-lined.mx-navigationlist .mx-navigationlist-item:first-child {
+  padding: 15px 20px 15px 16px;
+  border-left: 4px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-top: none;
   border-radius: 0;
+  background-color: transparent;
 }
-.navigationlist-lined.mx-navigationlist .mx-navigationlist-item:last-child {
-  border-radius: 0;
-  border-bottom: 1px solid #DDD;
+.mx-navigationlist .mx-navigationlist-item label {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 100;
+  color: #FFF;
+  font-size: 16px;
+}
+.mx-navigationlist .mx-navigationlist-item:hover, .mx-navigationlist .mx-navigationlist-item:focus, .mx-navigationlist .mx-navigationlist-item.active {
+  background-color: transparent;
+}
+.mx-navigationlist .mx-navigationlist-item:hover label, .mx-navigationlist .mx-navigationlist-item:focus label, .mx-navigationlist .mx-navigationlist-item.active label {
+  color: #FFF;
+}
+.mx-navigationlist .mx-navigationlist-item.active {
+  border-left-color: #FFF;
+  color: #FFF;
+  background-color: transparent;
 }
 
 /* ==========================================================================
