--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -291,27 +291,27 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .alert-success {
-  border-color: shade(#8CC152, 26);
-  background-color: tint(#8CC152, 80);
-  color: shade(#8CC152, 40);
+  border-color: #688f3d;
+  background-color: #e8f3dc;
+  color: #547431;
 }
 
 .alert-info {
-  border-color: shade(#8AD4ED, 26);
-  background-color: tint(#8AD4ED, 80);
-  color: shade(#8AD4ED, 40);
+  border-color: #669daf;
+  background-color: #e8f6fb;
+  color: #537f8e;
 }
 
 .alert-warning {
-  border-color: shade(#F6BB42, 26);
-  background-color: tint(#F6BB42, 80);
-  color: shade(#F6BB42, 40);
+  border-color: #b68a31;
+  background-color: #fdf1d9;
+  color: #947028;
 }
 
 .alert-danger {
-  border-color: shade(#D9534F, 26);
-  background-color: tint(#D9534F, 80);
-  color: shade(#D9534F, 40);
+  border-color: #a13d3a;
+  background-color: #f7dddc;
+  color: #82322f;
 }
 
 .has-error .alert {
@@ -337,19 +337,19 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-default-darker {
-  background-color: shade(#DDD, 40) !important;
+  background-color: #858585 !important;
 }
 
 .background-default-dark {
-  background-color: shade(#DDD, 26) !important;
+  background-color: #a4a4a4 !important;
 }
 
 .background-default-light {
-  background-color: tint(#DDD, 40) !important;
+  background-color: #ebebeb !important;
 }
 
 .background-default-lighter {
-  background-color: tint(#DDD, 80) !important;
+  background-color: #f8f8f8 !important;
 }
 
 .background-inverse {
@@ -357,19 +357,19 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-inverse-darker {
-  background-color: shade(#3D3F41, 40) !important;
+  background-color: #252627 !important;
 }
 
 .background-inverse-dark {
-  background-color: shade(#3D3F41, 26) !important;
+  background-color: #2d2f30 !important;
 }
 
 .background-inverse-light {
-  background-color: tint(#3D3F41, 40) !important;
+  background-color: #8b8c8d !important;
 }
 
 .background-inverse-lighter {
-  background-color: tint(#3D3F41, 80) !important;
+  background-color: #d8d9d9 !important;
 }
 
 .background-primary {
@@ -377,19 +377,19 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-primary-darker {
-  background-color: shade(#ffcb00, 40) !important;
+  background-color: #997a00 !important;
 }
 
 .background-primary-dark {
-  background-color: shade(#ffcb00, 26) !important;
+  background-color: #bd9600 !important;
 }
 
 .background-primary-light {
-  background-color: tint(#ffcb00, 40) !important;
+  background-color: #ffe066 !important;
 }
 
 .background-primary-lighter {
-  background-color: tint(#ffcb00, 80) !important;
+  background-color: #fff5cc !important;
 }
 
 .background-info {
@@ -397,19 +397,19 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-info-darker {
-  background-color: shade(#8AD4ED, 40) !important;
+  background-color: #537f8e !important;
 }
 
 .background-info-dark {
-  background-color: shade(#8AD4ED, 26) !important;
+  background-color: #669daf !important;
 }
 
 .background-info-light {
-  background-color: tint(#8AD4ED, 40) !important;
+  background-color: #b9e5f4 !important;
 }
 
 .background-info-lighter {
-  background-color: tint(#8AD4ED, 80) !important;
+  background-color: #e8f6fb !important;
 }
 
 .background-success {
@@ -417,19 +417,19 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-success-darker {
-  background-color: shade(#8CC152, 40) !important;
+  background-color: #547431 !important;
 }
 
 .background-success-dark {
-  background-color: shade(#8CC152, 26) !important;
+  background-color: #688f3d !important;
 }
 
 .background-success-light {
-  background-color: tint(#8CC152, 40) !important;
+  background-color: #bada97 !important;
 }
 
 .background-success-lighter {
-  background-color: tint(#8CC152, 80) !important;
+  background-color: #e8f3dc !important;
 }
 
 .background-warning {
@@ -437,19 +437,19 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-warning-darker {
-  background-color: shade(#F6BB42, 40) !important;
+  background-color: #947028 !important;
 }
 
 .background-warning-dark {
-  background-color: shade(#F6BB42, 26) !important;
+  background-color: #b68a31 !important;
 }
 
 .background-warning-light {
-  background-color: tint(#F6BB42, 40) !important;
+  background-color: #fad68e !important;
 }
 
 .background-warning-lighter {
-  background-color: tint(#F6BB42, 80) !important;
+  background-color: #fdf1d9 !important;
 }
 
 .background-danger {
@@ -457,19 +457,19 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-danger-darker {
-  background-color: shade(#D9534F, 40) !important;
+  background-color: #82322f !important;
 }
 
 .background-danger-dark {
-  background-color: shade(#D9534F, 26) !important;
+  background-color: #a13d3a !important;
 }
 
 .background-danger-light {
-  background-color: tint(#D9534F, 40) !important;
+  background-color: #e89895 !important;
 }
 
 .background-danger-lighter {
-  background-color: tint(#D9534F, 80) !important;
+  background-color: #f7dddc !important;
 }
 
 /* ==========================================================================
@@ -951,7 +951,7 @@ textarea.form-control, textarea.readonly-input {
   text-overflow: ellipsis;
 }
 .mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr.selected td, .mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr.selected:hover td {
-  background-color: shade(#fff, 1) !important;
+  background-color: #fcfcfc !important;
   color: #fff;
 }
 .mx-datagrid .mx-datagrid-body-table .mx-datagrid-foot > tr > th {
@@ -1015,10 +1015,10 @@ textarea.form-control, textarea.readonly-input {
    Default Mendix Datagrid Widget with hover
 ========================================================================== */
 .datagrid-hover.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr:hover td, .mx-datagrid.multilevel-grid .mx-datagrid-body-table .mx-datagrid-body tr:hover td {
-  background-color: shade(#fff, 3) !important;
+  background-color: #f7f7f7 !important;
 }
 .datagrid-hover.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr.selected:hover td, .mx-datagrid.multilevel-grid .mx-datagrid-body-table .mx-datagrid-body tr.selected:hover td {
-  background-color: shade(tint(#ffcb00, 80), 3) !important;
+  background-color: #f7eec6 !important;
 }
 
 /* ==========================================================================
@@ -1599,28 +1599,28 @@ textarea.form-control, textarea.readonly-input {
 }
 .mx-groupbox.groupbox-callout-info > .mx-groupbox-header,
 .mx-groupbox.groupbox-callout-info > .mx-groupbox-body {
-  background-color: tint(#8AD4ED, 80);
+  background-color: #e8f6fb;
 }
 .mx-groupbox.groupbox-callout-info > .mx-groupbox-header {
   color: #8AD4ED;
 }
 .mx-groupbox.groupbox-callout-success > .mx-groupbox-header,
 .mx-groupbox.groupbox-callout-success > .mx-groupbox-body {
-  background-color: tint(#8CC152, 80);
+  background-color: #e8f3dc;
 }
 .mx-groupbox.groupbox-callout-success > .mx-groupbox-header {
   color: #8CC152;
 }
 .mx-groupbox.groupbox-callout-warning > .mx-groupbox-header,
 .mx-groupbox.groupbox-callout-warning > .mx-groupbox-body {
-  background-color: tint(#F6BB42, 80);
+  background-color: #fdf1d9;
 }
 .mx-groupbox.groupbox-callout-warning > .mx-groupbox-header {
   color: #F6BB42;
 }
 .mx-groupbox.groupbox-callout-danger > .mx-groupbox-header,
 .mx-groupbox.groupbox-callout-danger > .mx-groupbox-body {
-  background-color: tint(#D9534F, 80);
+  background-color: #f7dddc;
 }
 .mx-groupbox.groupbox-callout-danger > .mx-groupbox-header {
   color: #D9534F;
@@ -1826,10 +1826,10 @@ img.img-auto,
   background-color: #FFF;
 }
 .mx-listview .mx-listview-item.selected {
-  background-color: shade(#fff, 1) !important;
+  background-color: #fcfcfc !important;
 }
 .mx-listview .mx-listview-item.selected:hover {
-  background-color: shade(tint(#ffcb00, 80), 3) !important;
+  background-color: #f7eec6 !important;
 }
 .mx-listview .mx-listview-item:nth-child(2n+1) {
   background-color: #FFF;
@@ -1845,7 +1845,7 @@ img.img-auto,
    Default Mendix Listview Widget with hover
 ========================================================================== */
 .listview-hover.mx-listview .mx-listview-item:hover, .mx-listview.multilevel-list .mx-listview-item:hover, .listview-hover.mx-listview .mx-listview-item:active, .mx-listview.multilevel-list .mx-listview-item:active {
-  background-color: shade(#fff, 3) !important;
+  background-color: #f7f7f7 !important;
 }
 
 /* ==========================================================================
@@ -2718,7 +2718,7 @@ table.table-fixed {
   background-color: transparent;
 }
 .mx-templategrid .mx-templategrid-item.selected {
-  background-color: shade(#fff, 1) !important;
+  background-color: #fcfcfc !important;
 }
 .mx-templategrid .mx-layoutgrid {
   padding-top: 0 !important;
@@ -2731,13 +2731,13 @@ table.table-fixed {
    Default Mendix Templategrid Widget Hover
 ========================================================================== */
 .templategrid-hover.mx-templategrid .mx-templategrid-item:hover {
-  background-color: shade(#fff, 3) !important;
+  background-color: #f7f7f7 !important;
 }
 .templategrid-hover.mx-templategrid .mx-templategrid-item.selected {
-  background-color: shade(#fff, 1) !important;
+  background-color: #fcfcfc !important;
 }
 .templategrid-hover.mx-templategrid .mx-templategrid-item.selected:hover {
-  background-color: shade(tint(#ffcb00, 80), 3) !important;
+  background-color: #f7eec6 !important;
 }
 
 /* ==========================================================================
@@ -3232,7 +3232,7 @@ h1, h2, h3, h4, h5, h6,
   color: #FFF;
 }
 .masterdetail-listview .mx-listview .mx-listview-item.selected:hover, .masterdetail-listview .mx-listview .mx-listview-item.selected:active {
-  background-color: shade(#fff, 1) !important;
+  background-color: #fcfcfc !important;
 }
 
 /* ==========================================================================
@@ -4174,5 +4174,3 @@ body .mx-header .btn-image.glyphicon {
 .navlayout-topbar .region-topbar .mx-navbar ul.nav > li.mx-navbar-item > a {
   padding: 30px;
 }
-
-/*# sourceMappingURL=lib.css.map */
