--- a/styles/sass/custom/components/_templategrids.scss
+++ b/styles/sass/custom/components/_templategrids.scss
@@ -6,17 +6,17 @@
 .mx-templategrid {
 	/* Styles here */
 	.mx-templategrid-item {
-		border:none;
+		/*border:none;
 		padding: 8px 8px 8px 8px;
 		cursor: default;
-		background-color:rgba(44, 44, 44, 0.49);
+		background-color:rgba(44, 44, 44, 0.49);*/
 		&:hover {
-			background-color: rgba(255, 255, 255, 0.22)!important;
+		//	background-color: rgba(255, 255, 255, 0.22)!important;
 		}
 		&.selected {
-			background-color:rgba(255, 255, 255, 0.37) !important;
+		//	background-color:rgba(255, 255, 255, 0.37) !important;
 			&:hover {
-				background-color: rgba(255, 255, 255, 0.22)!important;
+			//	background-color: rgba(255, 255, 255, 0.22)!important;
 			}
 		}
 	}
@@ -31,7 +31,7 @@
 .templategrid-hover.mx-templategrid {
 	.mx-templategrid-item {
 		&:hover {
-			
+
 		}
 	}
 }
@@ -44,7 +44,7 @@
 // ==========================================================================
 .templategrid-selectable.mx-templategrid {
 	.mx-templategrid-item {
-		
+
 	}
 }
 
@@ -59,14 +59,14 @@
 
 	}
 	.mx-templategrid-item {
-		color: #B2B3B3;
+		/*color: #B2B3B3;
 		background-color: rgba(0, 0, 0, 0.22);
 		padding: 8px 8px 8px 8px;
 		cursor: default;
 		border-left: none;
 		border-right: none;
 		border-top: 1px solid rgba(221, 221, 221, 0.17);
-		border-bottom: 1px solid rgba(221, 221, 221, 0.24);
+		border-bottom: 1px solid rgba(221, 221, 221, 0.24);*/
 	}
 }
 
@@ -79,7 +79,7 @@
 // ==========================================================================
 .templategrid-striped.mx-templategrid {
 	.mx-templategrid-row:nth-child(odd) .mx-templategrid-item {
-		background-color: rgba(27, 27, 27, 0.3);
+		//background-color: rgba(27, 27, 27, 0.3);
 	}
 }
 
