Moved styling to variables

--- a/styles/sass/custom/_custom-variables.scss
+++ b/styles/sass/custom/_custom-variables.scss
@@ -37,10 +37,10 @@ $color-layout-bg:					    transparent;
 $color-layout-bg-secondary:				transparent;
 
 //== Layout settings
-// Topbar 
+// Topbar
 $color-topbar-bg: 						$color-primary;
 $minimalheight-topbar:					80px;
-// Sidebar 
+// Sidebar
 $color-sidebar-bg: 						linear-gradient(to bottom, #1c1c1c 8%, rgba(28, 28, 28, 0.3) 54%, #ffffff 96%);
 // Mobile header
 $m-height-header:						44px;
@@ -51,7 +51,7 @@ $m-color-header-bg: 					$color-primary;
 //== Basic text settings
 // Base font color and size on '<body>'.
 $font-size-base:        			 	14px;
-$font-color-base:						$color-text-black;
+$font-color-base:						$color-text-white;
 
 // Button Text Size
 $font-btn-size:						   	12px;
@@ -68,7 +68,7 @@ $color-border-default:					rgba(221, 221, 221, 0.41);
 
 
 
-//== Step 3: 
+//== Step 3:
 //
 //## Advanced layout options
 
@@ -127,7 +127,7 @@ $font-size-small:        				ceil($font-size-base * 0.85); // ~12px
 
 //== Color variations
 //
-//## 
+//##
 // Text Colors
 // $color-text-black-secondary:         lighten($color-text-black, 40%);
 // $color-text-black-disabled:			rgba($color-text-black, .26);
@@ -138,39 +138,39 @@ $font-size-small:        				ceil($font-size-base * 0.85); // ~12px
 // $color-text-white-hint:              rgba($color-text-white,	.3);
 
 // Color Variations
-// $color-default-darker: 				shade($color-default,40);	
-// $color-default-dark: 				shade($color-default,26);	
-// $color-default-light: 				tint($color-default,40);	
-// $color-default-lighter: 				tint($color-default,80);	
+// $color-default-darker: 				shade($color-default,40);
+// $color-default-dark: 				shade($color-default,26);
+// $color-default-light: 				tint($color-default,40);
+// $color-default-lighter: 				tint($color-default,80);
 
-// $color-inverse-darker: 				shade($color-inverse,40);	
-// $color-inverse-dark: 				shade($color-inverse,26);	
-// $color-inverse-light: 				tint($color-inverse,40);	
-// $color-inverse-lighter: 				tint($color-inverse,80);	
+// $color-inverse-darker: 				shade($color-inverse,40);
+// $color-inverse-dark: 				shade($color-inverse,26);
+// $color-inverse-light: 				tint($color-inverse,40);
+// $color-inverse-lighter: 				tint($color-inverse,80);
 
-// $color-primary-darker: 				shade($color-primary,40);	
-// $color-primary-dark: 				shade($color-primary,26);	
-// $color-primary-light: 				tint($color-primary,40);	
-// $color-primary-lighter: 				tint($color-primary,80);	
+// $color-primary-darker: 				shade($color-primary,40);
+// $color-primary-dark: 				shade($color-primary,26);
+// $color-primary-light: 				tint($color-primary,40);
+// $color-primary-lighter: 				tint($color-primary,80);
 
-// $color-info-darker: 					shade($color-info,40);	
-// $color-info-dark: 					shade($color-info,26);	
-// $color-info-light: 					tint($color-info,40);	
-// $color-info-lighter: 				tint($color-info,80);	
+// $color-info-darker: 					shade($color-info,40);
+// $color-info-dark: 					shade($color-info,26);
+// $color-info-light: 					tint($color-info,40);
+// $color-info-lighter: 				tint($color-info,80);
 
-// $color-success-darker: 				shade($color-success,40);	
-// $color-success-dark: 				shade($color-success,26);	
-// $color-success-light: 				tint($color-success,40);	
-// $color-success-lighter: 				tint($color-success,80);	
+// $color-success-darker: 				shade($color-success,40);
+// $color-success-dark: 				shade($color-success,26);
+// $color-success-light: 				tint($color-success,40);
+// $color-success-lighter: 				tint($color-success,80);
 
-// $color-warning-darker: 				shade($color-warning,40);	
-// $color-warning-dark: 				shade($color-warning,26);	
-// $color-warning-light: 				tint($color-warning,40);	
-// $color-warning-lighter: 				tint($color-warning,80);	
+// $color-warning-darker: 				shade($color-warning,40);
+// $color-warning-dark: 				shade($color-warning,26);
+// $color-warning-light: 				tint($color-warning,40);
+// $color-warning-lighter: 				tint($color-warning,80);
 
-// $color-danger-darker: 				shade($color-danger,40);	
-// $color-danger-dark: 					shade($color-danger,26);	
-// $color-danger-light: 				tint($color-danger,40);	
+// $color-danger-darker: 				shade($color-danger,40);
+// $color-danger-dark: 					shade($color-danger,26);
+// $color-danger-light: 				tint($color-danger,40);
 // $color-danger-lighter: 				tint($color-danger,80);
 
 
@@ -228,34 +228,34 @@ $input-height:							33px;
 //## For each buttons, define text, background and border color.
 
 // Background Color
-// $color-btn-bg-default: 				$color-default;	
-// $color-btn-bg-inverse: 				$color-inverse;	
-// $color-btn-bg-primary: 				$color-primary; 
-// $color-btn-bg-info: 					$color-info; 
-// $color-btn-bg-success: 				$color-success; 
+// $color-btn-bg-default: 				$color-default;
+// $color-btn-bg-inverse: 				$color-inverse;
+$color-btn-bg-primary:           rgba(0, 0, 0, 0.5);
+// $color-btn-bg-info: 					$color-info;
+// $color-btn-bg-success: 				$color-success;
 // $color-btn-bg-warning: 				$color-warning;
-// $color-btn-bg-danger: 				$color-danger; 	
-// $color-btn-bg-white: 				#FFF; 
+// $color-btn-bg-danger: 				$color-danger;
+// $color-btn-bg-white: 				#FFF;
 
 // Text Color
 // $color-btn-text-default: 			$color-text-black;
 // $color-btn-text-inverse: 			#FFF;
-// $color-btn-text-primary: 			#FFF;
+$color-btn-text-primary: 			#A6A6A6;
 // $color-btn-text-info: 				#FFF;
 // $color-btn-text-success: 			#FFF;
 // $color-btn-text-warning: 			#FFF;
 // $color-btn-text-danger: 				#FFF;
-// $color-btn-text-white: 				$color-text-black; 
+// $color-btn-text-white: 				$color-text-black;
 
 // Border Color
 // $color-btn-border-default: 			$color-default;
 // $color-btn-border-inverse: 			$color-inverse;
-// $color-btn-border-primary: 			$color-primary;
+$color-btn-border-primary: 			rgba(0, 0, 0, 0.2);
 // $color-btn-border-info: 				$color-info;
 // $color-btn-border-success: 			$color-success;
 // $color-btn-border-warning: 			$color-warning;
 // $color-btn-border-danger: 			$color-danger;
-// $color-btn-border-white: 			#FFF; 
+// $color-btn-border-white: 			#FFF;
 
 
 
@@ -288,15 +288,15 @@ $color-dataview-controls-border: 		$gray-primary;
 $color-grid-border:						$gray-primary;
 
 // Background Color
-// $color-grid-bg:						#FFF;
+$color-grid-bg:						rgba(228, 228, 228, 0.17);
 $color-grid-bg-header:					transparent; // Grid Headers
-$color-grid-bg-hover:					shade(#fff,3);//#FFFFD6;
-$color-grid-bg-selected:				shade(#fff,1);//#F9F9D1;
-// $color-grid-bg-selected-hover: 		shade(#fff,3);
+$color-grid-bg-hover:					rgba(87, 87, 87, 0.45);
+$color-grid-bg-selected:				rgba(87, 87, 87, 0.15) ;//#F9F9D1;
+$color-grid-bg-selected-hover: 			rgba(87, 87, 87, 0.45);
 $color-grid-text-selected:				#fff;
 
 // Striped
-// $color-grid-bg-striped:				lighten($color-grid-border,5);
+$color-grid-bg-striped:				rgba(0, 0, 0, 0.17);
 
 // Footer
 // $color-grid-footer-bg:				$gray-primary;
@@ -341,9 +341,9 @@ $color-groupbox-text-white: 		    darken(#fff,15%);
 // $color-callout-danger:				$color-danger;
 
 // Background Color
-// $color-callout-bg-info:				$color-info-lighter; 
-// $color-callout-bg-success:			$color-success-lighter; 
-// $color-callout-bg-warning:			$color-warning-lighter; 
+// $color-callout-bg-info:				$color-info-lighter;
+// $color-callout-bg-success:			$color-success-lighter;
+// $color-callout-bg-warning:			$color-warning-lighter;
 // $color-callout-bg-danger:			$color-danger-lighter;
 
 
@@ -355,11 +355,11 @@ $color-groupbox-text-white: 		    darken(#fff,15%);
 
 // Background Color
 // $color-label-bg-default: 			$color-default;
-// $color-label-bg-primary: 			$color-primary; 
-// $color-label-bg-info: 				$color-info; 
-// $color-label-bg-success: 			$color-success; 
+// $color-label-bg-primary: 			$color-primary;
+// $color-label-bg-info: 				$color-info;
+// $color-label-bg-success: 			$color-success;
 // $color-label-bg-warning: 			$color-warning;
-// $color-label-bg-danger: 				$color-danger; 	
+// $color-label-bg-danger: 				$color-danger;
 
 // Text Color
 // $color-label-text-default: 			$color-text-black;
@@ -474,11 +474,11 @@ $color-modal-header-text:				$color-text-black;
 //##
 
 // Scroll container / layout container default padding (if you are using bootstrap containers use a minimal of 15px)
-// $padding-layoutcontainer-base:		0px; 
+// $padding-layoutcontainer-base:		0px;
 // $m-padding-layoutcontainer-base:		0px;
-// $t-padding-layoutcontainer-base:		0px; 
+// $t-padding-layoutcontainer-base:		0px;
 
-// Combined spacing 
+// Combined spacing
 // $default-spacing:					$default-spacing-top $default-spacing-right $default-spacing-bottom $default-spacing-left;
 // $m-default-spacing:					$m-default-spacing-top $m-default-spacing-right $m-default-spacing-bottom $m-default-spacing-left;
 // $t-default-spacing:					$t-default-spacing-top $t-default-spacing-right $t-default-spacing-bottom $t-default-spacing-left;
@@ -562,7 +562,7 @@ $m-color-header-link:					$color-inverse;
 // Background Color
 // $m-color-tab-bg:						$color-primary;
 // $m-color-tab-bg-hover: 				lighten($color-tab-border,5);
-// $m-color-tab-bg-active:				darken($m-color-tab-bg, 15);	
+// $m-color-tab-bg-active:				darken($m-color-tab-bg, 15);
 
 // Border Color
 // $m-color-tab-border:					darken($m-color-tab-bg, 15);
