--- a/styles/css/custom/custom.css
+++ b/styles/css/custom/custom.css
@@ -55,21 +55,21 @@ a:hover {
 }
 
 .btn-primary {
-  border-color: rgba(0, 0, 0, 0.2);
-  background-color: rgba(0, 0, 0, 0.5);
+  /*border-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);*/
 }
 .btn-primary.btn-bordered {
-  background-color: transparent;
-  color: #A6A6A6;
+  /*  background-color: transparent;
+    color: #A6A6A6;*/
 }
 .btn-primary.btn-bordered:hover {
-  background-color: #A6A6A6;
+  /*background-color: #A6A6A6;
   color: #FFF;
-  border: 1px solid #A6A6A6;
+  border: 1px solid #A6A6A6;*/
 }
 .btn-primary:hover {
-  background-color: #000;
-  border: 1px solid #000;
+  /*background-color:#000;
+  border:1px solid #000;*/
 }
 
 .btn-inverse {
@@ -97,12 +97,10 @@ a:hover {
 
    Default Mendix Datagrid Widget. The datagrid shows a list of objects in a grid
 ========================================================================== */
-.mx-datagrid .mx-datagrid-head-table {
-  color: #FFF;
-  background-color: rgba(228, 228, 228, 0.17);
+.mx-datagrid {
+  font-weight: 100;
 }
 .mx-datagrid .mx-datagrid-head-table th {
-  background-color: transparent;
   border-top-width: 1px;
   border-top-style: solid;
   font-weight: 100;
@@ -117,46 +115,18 @@ a:hover {
   /* Table body */
   /* Table footer */
 }
+.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr {
+  background-color: rgba(0, 0, 0, 0.17);
+}
 .mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr td {
-  padding: 15px 8px 15px 8px;
-  background-color: rgba(216, 216, 216, 0.44);
-  border-width: 0;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-color: rgba(87, 87, 87, 0.45);
-  color: #FFF;
   /* Text without spaces */
 }
-.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr td:focus {
-  border-color: rgba(87, 87, 87, 0.45) !important;
-}
-.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr.selected td, .mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr.selected:hover td {
-  background-color: rgba(122, 122, 122, 0.35) !important;
-}
-.mx-datagrid .mx-datagrid-body-table *:focus {
-  background-color: rgba(255, 255, 255, 0.1) !important;
+.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr:nth-child(odd) td {
+  background-color: rgba(228, 228, 228, 0.17);
 }
 
 .datagrid-striped.mx-datagrid .mx-datagrid-body-table {
   /* Body */
-}
-.datagrid-striped.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr:nth-child(odd) td {
-  padding: 15px 8px 15px 8px;
-  background-color: rgba(0, 0, 0, 0.44);
-  border-width: 0;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-color: rgba(87, 87, 87, 0.45);
-}
-.datagrid-striped.mx-datagrid > tbody > tr:nth-of-type(odd) {
-  background-color: rgba(181, 181, 181, 0.42);
-}
-
-.datagrid-hover.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr:hover td {
-  background-color: rgba(87, 87, 87, 0.45) !important;
-}
-.datagrid-hover.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr.selected:hover td {
-  background-color: rgba(87, 87, 87, 0.45) !important;
 }
 
 /* ==========================================================================
@@ -176,9 +146,6 @@ a:hover {
 
    Default Mendix Grid
 ========================================================================== */
-.mx-grid {
-  background-color: transparent;
-}
 .mx-grid .mx-grid-controlbar {
   /* Styles here */
 }
@@ -190,9 +157,6 @@ a:hover {
 }
 .mx-grid .mx-grid-controlbar .mx-grid-pagingbar .mx-button:hover {
   /* Styles here */
-}
-.mx-grid .mx-grid-controlbar .mx-grid-pagingbar .mx-grid-paging-status {
-  color: #fff;
 }
 .mx-grid .mx-grid-controlbar .mx-grid-searchbar {
   /* Styles here */
@@ -612,34 +576,21 @@ table.table-label-compact.mx-table > tbody > tr > td .mx-referenceselector-input
   /* Styles here */
 }
 .mx-templategrid .mx-templategrid-item {
-  border: none;
+  /*border:none;
   padding: 8px 8px 8px 8px;
   cursor: default;
-  background-color: rgba(44, 44, 44, 0.49);
-}
-.mx-templategrid .mx-templategrid-item:hover {
-  background-color: rgba(255, 255, 255, 0.22) !important;
-}
-.mx-templategrid .mx-templategrid-item.selected {
-  background-color: rgba(255, 255, 255, 0.37) !important;
-}
-.mx-templategrid .mx-templategrid-item.selected:hover {
-  background-color: rgba(255, 255, 255, 0.22) !important;
+  background-color:rgba(44, 44, 44, 0.49);*/
 }
 
 .templategrid-lined.mx-templategrid .mx-templategrid-item {
-  color: #B2B3B3;
+  /*color: #B2B3B3;
   background-color: rgba(0, 0, 0, 0.22);
   padding: 8px 8px 8px 8px;
   cursor: default;
   border-left: none;
   border-right: none;
   border-top: 1px solid rgba(221, 221, 221, 0.17);
-  border-bottom: 1px solid rgba(221, 221, 221, 0.24);
-}
-
-.templategrid-striped.mx-templategrid .mx-templategrid-row:nth-child(odd) .mx-templategrid-item {
-  background-color: rgba(27, 27, 27, 0.3);
+  border-bottom: 1px solid rgba(221, 221, 221, 0.24);*/
 }
 
 /* ==========================================================================
